--- a/ising_phase_classifier/classification_FNN.ipynb
+++ b/ising_phase_classifier/classification_FNN.ipynb
@@ -11,7 +11,9 @@
     "April 25, 2022\n",
     "\n",
     "This code relies on work from Lauren Hayward, Juan Carrasquilla, and Mohamed Hibat Allah. <br/>\n",
-    "Dataset generated using Monte Carlo sampling also by the Lauren, Juan and Mohamed."
+    "Dataset generated using Monte Carlo sampling also by the Lauren, Juan and Mohamed.\n",
+    "\n",
+    "Reference: J. Carrasquilla and R. G. Melko, Nat. Phys. 13, 431 (2017), https://arxiv.org/abs/1605.01735."
    ]
   },
   {
@@ -680,7 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Number of neurons in hidden layer"
+    "### <span style=\"color:#F2903A\"> Number of neurons in hidden layer </span>"
    ]
   },
   {
@@ -878,7 +880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Learning rate"
+    "### <span style=\"color:#F2903A\"> Learning rate </span>"
    ]
   },
   {
